# ewin

./: .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  Dockerfile_bk  Environment  LICENSE  README.md  build.rs  clippy.toml  docker-compose.yml  ewin_0.5.1_all.deb  keybind.json5  log.txt  release.toml  setting.toml  snapcraft.yaml
crates/base/ewin-cfg/: Cargo.toml
crates/base/ewin-cfg/src/: cfg.rs  cfg_edit.rs  cfg_file_path.rs  cfg_setting.rs  colors.rs  lib.rs  log.rs  theme_loader.rs
crates/base/ewin-const/: Cargo.toml
crates/base/ewin-const/src/: def.rs  icon.rs  lib.rs  model.rs  term.rs
crates/base/ewin-job/: Cargo.toml
crates/base/ewin-job/src/: job.rs  lib.rs
crates/base/ewin-key/: Cargo.toml
crates/base/ewin-key/src/: clipboard.rs  grep_cancel.rs  history.rs  lib.rs  model.rs  sel_range.rs  tab_state.rs  util.rs  watcher.rs
crates/base/ewin-utils/: Cargo.toml
crates/base/ewin-utils/src/: char_edit.rs  lib.rs  os.rs  path.rs  str_edit.rs  util.rs
crates/base/ewin-view/: Cargo.toml
crates/base/ewin-view/src/: char_style.rs  lib.rs  model.rs  scrollbar_h.rs  scrollbar_v.rs  term.rs  terminal.rs  view.rs
crates/ewin-com/: Cargo.toml
crates/ewin-com/src/: char_style.rs  clipboard.rs  colors.rs  def.rs  file.rs  file_path.rs  history.rs  lib.rs  log.rs  model.rs  scrollbar_v.rs  sel_range.rs  tab_state.rs  util.rs  watcher.rs
crates/ewin-com/src/_cfg/: cfg.rs  cfg_setting.rs  setting_file_loader.rs  theme_loader.rs
crates/ewin-com/src/files/: bom.rs  encode.rs  file.rs
crates/ewin-const/: Cargo.toml
crates/ewin-const/src/: def.rs  lib.rs  model.rs
crates/ewin-editor/: Cargo.toml
crates/ewin-editor/src/: change_info.rs  convert.rs  editor.rs  input_comple.rs  lib.rs  model.rs  proc.rs  proc_edit.rs  scroll.rs  search copy.rs  search.rs  window.rs  window_mgr.rs
crates/ewin-editor/src/buf/: edit.rs  io.rs
crates/ewin-editor/src/fmt/: fmt_ctrl.rs  xml_html.rs
crates/ewin-editor/src/format/: format.rs  xml_html.rs
crates/ewin-editor/src/key/: cur.rs  edit.rs  mouse.rs  search.rs  select.rs  un_redo.rs
crates/ewin-editor/src/proc/: proc_base.rs  proc_config.rs  proc_edit.rs
crates/ewin-editor/src/prom/: grep_result.rs
crates/ewin-editor/src/prompt/: grep_result.rs
crates/ewin-editor/src/scrollbar/: horizontal.rs  vertical.rs
crates/ewin-editor/src/view/: buf_cache.rs  draw copy.rs  draw.rs  draw_range.rs  render.rs  render_range.rs  scale.rs
crates/ewin-plugin/: Cargo.toml
crates/ewin-plugin/src/: lib.rs  plugin.rs
crates/ewin-plugin/src/js/: js_func.rs  js_macro.rs
crates/ewin-prom/: Cargo.toml
crates/ewin-prom/src/: close.rs  enc_nl.rs  grep.rs  grep_result.rs  lib.rs  menu.rs  model.rs  move_row.rs  open_file.rs  prom.rs  prom_base.rs  replace.rs  save_confirm.rs  save_forced.rs  save_new_file.rs  search.rs  util.rs  watch_result.rs
crates/ewin-prom/src/cont/: choice.rs  cur.rs  edit.rs  mouse.rs  proc_edit.rs  promptcont.rs  select.rs  un_redo.rs
crates/ewin-prom/src/each/: enc_nl.rs  grep.rs  grep_result.rs  greping.rs  move_row.rs  open_file.rs  replace.rs  save_confirm.rs  save_forced.rs  save_new_file.rs  search.rs  watch_file.rs
crates/ewin-prom/src/prom/: choice.rs  prom_ctrl.rs  set_draw_posi.rs
crates/ewin-prom/src/prom_trait/: cont_trait.rs  main_trait.rs
crates/ewin-prom/src/prompt/: choice.rs  prompt.rs  set_draw_posi.rs
crates/ewin-state/: Cargo.toml
crates/ewin-state/src/: activitybar.rs  core.rs  editor.rs  editor_state.rs  filebar.rs  header_file.rs  lib.rs  sidebar.rs  tabs.rs  term.rs
crates/ewin-state/src/tabs/: all.rs  editor.rs  state.rs  tab.rs  tabs.rs  tabs_state.rs
crates/ewin-tabs/: Cargo.toml
crates/ewin-tabs/src/: draw.rs  event.rs  file.rs  lib.rs  msgbar.rs  size.rs  statusbar.rs  tab.rs  tabs.rs
crates/ewin-tabs/src/draws/: draw.rs
crates/ewin-tabs/src/evt_acts/: prom.rs  statusbar.rs  tabs.rs
crates/ewin-tabs/src/prom/: enc_nl.rs  grep_result.rs  move_row.rs  (+5 more)
crates/ewin-term/: Cargo.toml
crates/ewin-term/src/: draw.rs  event.rs  evt_act.rs  help.rs  lib.rs  life_cycle.rs  model.rs  place.rs  size.rs  tab.rs  term.rs  terminal copy.rs  terminal.rs
crates/ewin-widget/: Cargo.toml
crates/ewin-widget/src/: core.rs  lib.rs  model.rs
crates/ewin-window/: Cargo.toml
crates/ewin-window/src/: core.rs  lib.rs  model.rs  popup.rs  window.rs
crates/parts/ewin-activity_bar/: Cargo.toml
crates/parts/ewin-ctx_menu/: Cargo.toml
crates/parts/ewin-dialog/: Cargo.toml
crates/parts/ewin-editor/: Cargo.toml  evt_act.rs
crates/parts/ewin-file_bar/: Cargo.toml
crates/parts/ewin-help/: Cargo.toml
crates/parts/ewin-menu_bar/: Cargo.toml
crates/parts/ewin-menulist/: Cargo.toml
crates/parts/ewin-prom/: Cargo.toml
crates/parts/ewin-side_bar/: Cargo.toml
ewin-editor/: Cargo.toml
ewin-editor/src/: convert.rs  draw_range.rs  edit_proc.rs  editor.rs  lib.rs  model.rs  proc.rs  proc_edit.rs  scroll.rs
ewin-editor/src/buf/: edit.rs  io.rs
ewin-editor/src/format/: format.rs  xml_html.rs
ewin-editor/src/key/: cur.rs  edit.rs  mouse.rs  search.rs  select.rs  un_redo.rs
ewin-editor/src/prompt/: grep_result.rs
ewin-editor/src/view/: buf_cache.rs  draw.rs  draw_range.rs
ewin-prom/: Cargo.toml
ewin-prom/src/: close.rs  enc_nl.rs  grep.rs  grep_result.rs  lib.rs  menu.rs  model.rs  move_row.rs  open_file.rs  replace.rs  save_new_file.rs  search.rs
ewin-prom/src/cont/: choice.rs  cur.rs  edit.rs  edit_proc.rs  mouse.rs  proc_edit.rs  promptcont.rs  select.rs  un_redo.rs
ewin-prom/src/prompt/: choice.rs  prompt.rs  set_draw_posi.rs  set_posi.rs
ewin-term/: Cargo.toml
ewin-term/src/: help.rs  lib.rs  main.rs  model.rs  tab.rs  terminal.rs
ewin-term/src/bar/: headerbar.rs  msgbar.rs  statusbar.rs
ewin-term/src/ctx_menu/: evt.rs  init.rs
ewin-term/src/evt_act/: _evt_act.rs  ctx_menu.rs  editor.rs  headerbar.rs  prom.rs  statusbar.rs
ewin-term/src/macros/: js_func.rs  js_macro.rs  key_macro.rs
ewin-term/src/prompt/: close.rs  enc_nl.rs  grep.rs  grep_result.rs  menu.rs  move_row.rs  open_file.rs  replace.rs  save_new_file.rs  search.rs
(+560 files in other folders)
