[workspace]
members = [
  "crates/base/ewin-cfg",
  "crates/base/ewin-const",
  "crates/base/ewin-key",
  "crates/ewin-term",
  "crates/ewin-state",
  "crates/ewin-view",
  "crates/parts/ewin-editor",
  "crates/parts/ewin-prom",
  "crates/parts/ewin-menulist",
  "crates/parts/ewin-dialog",
]

[package]
name = "ewin"
version = "0.0.2"
rust-version = "1.56.0"
description = "Simple editor for Window(GUI) users.No need to remember commands."
authors = ["thinkingreed"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/thinkingreed/ewin"
license = "MIT"
keywords = ["text", "editor", "terminal", "cli", "tui"]
categories = ["text-editors", "command-line-utilities", ]

build = "build.rs"

[[bin]]
name = "ew"
path = "crates/ewin-core/main.rs"

[package.metadata.deb]
extended-description = """\
Simple editor for Window(GUI) users.\ 
No need to learn new commands.\

It provides basic features as a minimal text editor.\
depends = "$auto"\
"""
assets = [
    ["target/release/ew", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/ewin/README", "644"],
]

[dependencies]
crossterm  = {version ="0.24.0", features = ["event-stream"]} 
tokio = { version = "1.4.0", features = [ "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
futures = "0.3"
futures-util = "0.3.12"
clap = { version = "3.2.16", features = ["derive", "env"]}
notify="5.0.0-pre.13"
# grep
regex = "1.5.5"
grep = "0.2.8"
grep-matcher = "0.1.5"
grep-regex = "0.1.9"
grep-searcher = "0.1.8"
ignore = "0.4.18"
globset = "0.4.8"
crossbeam= "0.8.1"

ewin-key = {version = "0.0.2", path = "crates/base/ewin-key" }
ewin-cfg = {version = "0.0.2", path = "crates/base/ewin-cfg" }
ewin-const = {version = "0.0.2", path = "crates/base/ewin-const" }
ewin-term = {version = "0.0.2", path = "crates/ewin-term" }

[dev-dependencies]
cargo-husky = "1.5.0"

[target.'cfg(windows)'.build-dependencies]
windres = "0.2.2"
