[package]
name = "ewin-editor"
version = "0.8.0"
description = "Simple editor for Window(GUI) users.No need to remember commands."
authors = ["thinkingreed"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/thinkingreed/ewin"
license = "MIT"
keywords = ["text", "editor", "terminal", "cli", "tui"]
categories = ["command-line-utilities"]

[lib]
path = "src/lib.rs"

[dependencies]
ropey="1.2.0"
syntect = "4.5"
unicode-width = "0.1.8"
unicode-jp= "0.4.0"
crossterm  = {version ="0.21.0", features = ["event-stream"]} 
serde = { version = "1.0.123", features = ["derive"] }
regex = "1.4.3"
byteorder = "1.4.3"
serde_json = "1.0"
anyhow = "1"

ewin-core = { path = "../ewin-core" }
