[package]
name = "ewin-prom"
version = "0.8.0"
description = "Simple editor for Window(GUI) users.No need to remember commands."
authors = ["thinkingreed"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/thinkingreed/ewin"
license = "MIT"
keywords = ["text", "editor", "terminal", "cli", "tui"]
categories = ["command-line-utilities"]

[lib]
path = "src/lib.rs"

[dependencies]
crossterm  = {version ="0.21.0", features = ["event-stream"]} 
directories = "3.0.1"
tokio = { version = "1.4.0", features = ["process", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.6.3", features = ["codec"] }

ewin-core = { path = "../ewin-core" }
