[package]
name = "ewin-term"
version = "0.8.0"
description = "Simple editor for Window(GUI) users.No need to remember commands."
authors = ["thinkingreed"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/thinkingreed/ewin"
license = "MIT"
keywords = ["text", "editor", "terminal", "cli", "tui"]
categories = ["command-line-utilities"]
build = "../build.rs"

[profile.dev]
debug = 0

[package.metadata.deb]
extended-description = """\
Simple editor for Window(GUI) users.\ 
No need to learn new commands.\

It provides basic features as a minimal text editor.\
depends = "$auto"\
"""
assets = [
    ["target/release/ewin", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/ewin/README", "644"],
]

[package.metadata.rpm]
package = "ewin"
[package.metadata.rpm.cargo]
buildflags = ["--release"]
[package.metadata.rpm.targets]
ewin = { path = "/usr/bin/ewin" }


[[bin]]
name = "ewin"
path = "src/main.rs"

[dependencies]
crossterm  = {version ="0.21.0", features = ["event-stream"]} 
tokio = { version = "1.4.0", features = ["process", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.6.3", features = ["codec"] }
once_cell = "1.5.2"
unicode-width = "0.1.8"
directories = "3.0.1"
rusty_v8= "0.26.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
futures-util = "0.3.12"
clap = "2"


ewin-core = { path = "../ewin-core" }
ewin-editor = { path = "../ewin-editor" }
ewin-prom = { path = "../ewin-prom" }

[target.'cfg(windows)'.build-dependencies]
windres = "0.2.2"
