[package]
name = "ewin-term"
version = "0.0.1"
description = "Simple editor for Window(GUI) users.No need to remember commands."
authors = ["thinkingreed"]
edition = "2018"
repository = "https://github.com/thinkingreed/ewin"
license = "MIT"

[dependencies]
crossterm  = {version ="0.21.0", features = ["event-stream"]} 
tokio = { version = "1.4.0", features = ["process", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.6.3", features = ["codec"] }
once_cell = "1.5.2"
unicode-width = "0.1.8"
directories = "4.0.1"
rusty_v8= "0.27.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
futures-util = "0.3.12"
clap = "2"

ewin-core = {version = "0.0.1", path = "../ewin-core" }
ewin-editor = {version = "0.0.1", path = "../ewin-editor" }
ewin-prom = {version = "0.0.1", path = "../ewin-prom" }
