[package]
name = "ewin-com"
version = "0.0.2"
rust-version = "1.56.0"
description = """Simple editor for Window(GUI) users.
                 No need to remember commands."""
authors = ["thinkingreed"]
edition = "2021"
repository = "https://github.com/thinkingreed/ewin"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
ropey="1.2.0"
encoding_rs= "0.8.28"
faccess = "0.2.3"
chrono="0.4.19"
crossterm  = {version ="0.22.1", features = ["event-stream"]} 
anyhow = "1"
clipboard = "0.5.0"
colors-transform = "0.2.11"
serde = { version = "1.0.123", features = ["derive"] }
unicode-width = "0.1.8"
syntect = "4.5"
once_cell = "1.5.2"
tokio = { version = "1.4.0", features = ["process", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.6.3", features = ["codec"] }
clap = "2"
toml = "0.5.8"
directories = "4.0.1"
json5 = "0.4.1"
serde_json = "1.0"
regex = "1.4.3"
wslpath="0.0.2"
whoami = "1.2.0"

