[package]
name = "ewin-com"
version = "0.0.2"
rust-version = "1.56.0"
description = """Simple editor for Window(GUI) users.
                 No need to remember commands."""
authors = ["thinkingreed"]
edition = "2021"
repository = "https://github.com/thinkingreed/ewin"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
ropey="1.2.0"
encoding_rs= "0.8.31"
faccess = "0.2.3"
chrono="0.4.19"
crossterm  = {version ="0.24.0", features = ["event-stream"]} 
crossbeam-channel = "0.5.2"
clap = { version = "3.1.6", features = ["derive", "env"]}
anyhow = "1"
clipboard = "0.5.0"
colors-transform = "0.2.11"
serde = { version = "1.0.137", features = ["derive"] }
unicode-width = "0.1.8"
once_cell = "1.5.2"
tokio = { version = "1.4.0", features = ["process", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.1", features = ["codec"] }
toml="0.5.8" 
json5 = "0.4.1"
serde_json = "1.0"
regex = "1.4.3"
notify="5.0.0-pre.13"
subprocess = "0.2.8"
syntect = "5.0.0"
convert_case="0.5.0"

ewin-const = {version = "0.0.2", path = "../ewin-const" }
ewin-cfg = {version = "0.0.2", path = "../ewin-cfg" }
