[package]
name = "ewin-prom"
version = "0.0.2"
rust-version = "1.56.0"
description = "Simple editor for Window(GUI) users.No need to remember commands."
authors = ["thinkingreed"]
edition = "2021"
repository = "https://github.com/thinkingreed/ewin"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
crossterm  = {version ="0.24.0", features = ["event-stream"]} 
directories = "4.0.1"
tokio = { version = "1.4.0", features = ["process", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
chrono= "0.4.19"
dyn-clone = "1.0.5"
downcast = "0.11.0"
indexmap = "1.8.1"

ewin-com = {version = "0.0.2", path = "../ewin-com" }
ewin-editor = {version = "0.0.2", path = "../ewin-editor" }
ewin-cfg = {version = "0.0.2", path = "../ewin-cfg" }
ewin-const = {version = "0.0.2", path = "../ewin-const" }
ewin-widget = {version = "0.0.2", path = "../ewin-widget" }
