[package]
name = "ewin-state"
version = "0.0.2"
rust-version = "1.56.0"
description = "Simple editor for Window(GUI) users.No need to remember commands."
authors = ["thinkingreed"]
edition = "2021"
repository = "https://github.com/thinkingreed/ewin"
license = "MIT"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
once_cell = "1.5.2"
tokio = { version = "1.4.0", features = ["process", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.3", features = ["codec"] }

ewin-cfg = {version = "0.0.2", path = "../base/ewin-cfg" }
ewin-const = {version = "0.0.2", path = "../base/ewin-const" }
ewin-key = {version = "0.0.2", path = "../base/ewin-key" }
ewin-utils = {version = "0.0.2", path = "../base/ewin-utils" }
