[package]
name = "ewin-term"
version = "0.0.2"
rust-version = "1.56.0"
description = "Simple editor for Window(GUI) users.No need to remember commands."
authors = ["thinkingreed"]
edition = "2021"
repository = "https://github.com/thinkingreed/ewin"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
crossterm  = {version ="0.24.0", features = ["event-stream"]} 
tokio = { version = "1.4.0", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.0", features = ["codec"] }
once_cell = "1.5.2"
unicode-width = "0.1.9"
directories = "4.0.1"
v8= "0.45.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
futures-util = "0.3.12"
clap = { version = "3.1.6", features = ["derive", "env"]}
chrono= "0.4.19"
regex = "1.5.5"
grep = "0.2.8"
grep-matcher = "0.1.5"
grep-regex = "0.1.9"
grep-searcher = "0.1.8"
ignore = "0.4.18"
globset = "0.4.8"
crossbeam= "0.8.1"
dyn-clone = "1.0.5"
downcast = "0.11.0"


ewin-cfg = {version = "0.0.2", path = "../base/ewin-cfg" }
ewin-const = {version = "0.0.2", path = "../base/ewin-const" }
ewin-key = {version = "0.0.2", path = "../base/ewin-key" }
ewin-state = {version = "0.0.2", path = "../ewin-state" }
ewin-view = {version = "0.0.2", path = "../ewin-view" }
ewin-editor = {version = "0.0.2", path = "../parts/ewin-editor" }
ewin-prom = {version = "0.0.2", path = "../parts/ewin-prom" }
ewin-menulist = {version = "0.0.2", path = "../parts/ewin-menulist" }
ewin-dialog = {version = "0.0.2", path = "../parts/ewin-dialog" }
