[package]
name = "ewin-term"
version = "0.0.2"
rust-version = "1.56.0"
description = "Simple editor for Window(GUI) users.No need to remember commands."
authors = ["thinkingreed"]
edition = "2021"
repository = "https://github.com/thinkingreed/ewin"
license = "MIT"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
crossterm  = {version ="0.25.0", features = ["event-stream"]} 
tokio = { version = "1.4.0", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.0", features = ["codec"] }
once_cell = "1.5.2"
unicode-width = "0.1.9"
directories = "4.0.1"
v8= "0.48.0"
#rusty_v8= "0.28.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
futures-util = "0.3.12"
clap = { version = "3.1.6", features = ["derive", "env"]}
chrono= "0.4.19"
regex = "1.6.0"
grep = "0.2.8"
grep-matcher = "0.1.5"
grep-regex = "0.1.9"
grep-searcher = "0.1.8"
ignore = "0.4.18"
globset = "0.4.8"
crossbeam= "0.8.1"
dyn-clone = "1.0.5"
downcast = "0.11.0"
parking_lot = "0.12.1"

ewin-cfg = {version = "0.0.2", path = "../base/ewin-cfg" }
ewin-const = {version = "0.0.2", path = "../base/ewin-const" }
ewin-key = {version = "0.0.2", path = "../base/ewin-key" }
ewin-view = {version = "0.0.2", path = "../base/ewin-view" }
ewin-job = {version = "0.0.2", path = "../base/ewin-job" }
ewin-utils = {version = "0.0.2", path = "../base/ewin-utils" }
ewin-state = {version = "0.0.2", path = "../ewin-state" }
ewin-plugin = {version = "0.0.2", path = "../ewin-plugin" }
ewin-tabs = {version = "0.0.2", path = "../ewin-tabs" }
ewin-editor = {version = "0.0.2", path = "../parts/ewin-editor" }
ewin-prom = {version = "0.0.2", path = "../parts/ewin-prom" }
ewin-menu_bar = {version = "0.0.2", path = "../parts/ewin-menu_bar" }
ewin-dialog = {version = "0.0.2", path = "../parts/ewin-dialog" }
ewin-ctx_menu = {version = "0.0.2", path = "../parts/ewin-ctx_menu" }
ewin-file_bar = {version = "0.0.2", path = "../parts/ewin-file_bar" }
ewin-help = {version = "0.0.2", path = "../parts/ewin-help" }
ewin-status_bar = {version = "0.0.2", path = "../parts/ewin-status_bar" }
ewin-msg_bar = {version = "0.0.2", path = "../parts/ewin-msg_bar" }
ewin-side_bar = {version = "0.0.2", path = "../parts/ewin-side_bar" }


