[package]
name = "ewin-term"
publish = false
authors.workspace = true
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
parking_lot.workspace = true
crossterm.workspace = true
once_cell.workspace = true

ewin-cfg.workspace = true
ewin-const.workspace = true
ewin-key.workspace = true
ewin-view.workspace = true
ewin-job.workspace = true
ewin-utils.workspace = true
ewin-state.workspace = true
ewin-plugin.workspace = true
ewin-tabs.workspace = true
ewin-editor.workspace = true
ewin-prom.workspace = true
ewin-menu_bar.workspace = true
ewin-dialog.workspace = true
ewin-ctx_menu.workspace = true
ewin-file_bar.workspace = true
ewin-help.workspace = true
ewin-status_bar.workspace = true
ewin-msg_bar.workspace = true
ewin-side_bar.workspace = true
ewin-activity_bar.workspace = true
ewin-tooltip.workspace = true
