[package]
name = "ewin-widget"
version = "0.0.2"
rust-version = "1.56.0"
description = "Simple editor for Window(GUI) users.No need to remember commands."
authors = ["thinkingreed"]
edition = "2021"
repository = "https://github.com/thinkingreed/ewin"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
crossterm  = {version ="0.23.0", features = ["event-stream"]} 
indexmap="1.8.1"
serde_json = { version = "1.0.81"}
convert_case="0.5.0"

ewin-cfg = {version = "0.0.2", path = "../ewin-cfg" }
ewin-const = {version = "0.0.2", path = "../ewin-const" }
ewin-com = {version = "0.0.2", path = "../ewin-com" }
