[package]
name = "ewin-cfg"
version = "0.0.2"
rust-version = "1.56.0"
description = """Simple editor for Window(GUI) users.
                 No need to remember commands."""
authors = ["thinkingreed"]
edition = "2021"
repository = "https://github.com/thinkingreed/ewin"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
once_cell = "1.5.2"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0"
toml="0.5.8"
syntect = "5.0.0"
clap = { version = "3.1.6", features = ["derive", "env"]}
crossterm  = {version ="0.24.0", features = ["event-stream"]} 
colors-transform = "0.2.11"
whoami = "1.2.0"
directories = "4.0.1"
anyhow = "1.0.57"
json5 = "0.4.1"
chrono="0.4.19"


ewin-const = {version = "0.0.2", path = "../ewin-const" }
