[package]
name = "ewin-cfg"
publish = false
authors.workspace = true
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true



[dependencies]
once_cell.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
syntect.workspace = true
clap.workspace = true
crossterm.workspace = true
colors-transform.workspace = true
whoami.workspace = true
directories.workspace = true
anyhow.workspace = true
json5.workspace = true
chrono.workspace = true
ewin-const.workspace = true

