[package]
name = "ewin-const"
version = "0.0.2"
rust-version = "1.56.0"
description = """Simple editor for Window(GUI) users.
                 No need to remember commands."""
authors = ["thinkingreed"]
edition = "2021"
repository = "https://github.com/thinkingreed/ewin"
license = "MIT"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
encoding_rs="0.8.31"
once_cell = "1.5.2"
crossterm  = {version ="0.25.0", features = ["event-stream"]} 
