[package]
name = "ewin-job"
publish = false
authors.workspace = true
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
once_cell.workspace = true
crossterm.workspace = true
parking_lot.workspace = true
tokio.workspace = true
tokio-util.workspace = true

ewin-cfg.workspace = true
ewin-const.workspace = true
ewin-key.workspace = true
