[package]
name = "ewin-key"
version = "0.0.2"
rust-version = "1.56.0"
description = """Simple editor for Window(GUI) users.
                 No need to remember commands."""
authors = ["thinkingreed"]
edition = "2021"
repository = "https://github.com/thinkingreed/ewin"
license = "MIT"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
ropey="1.2.0"
encoding_rs= "0.8.31"
faccess = "0.2.3"
chrono="0.4.19"
crossterm  = {version ="0.25.0", features = ["event-stream"]} 
crossbeam-channel = "0.5.2"
clap = { version = "3.1.6", features = ["derive", "env"]}
anyhow = "1"
clipboard = "0.5.0"
colors-transform = "0.2.11"
serde = { version = "1.0.137", features = ["derive"] }
once_cell = "1.5.2"
toml="0.5.8" 
json5 = "0.4.1"
serde_json = "1.0"
regex = "1.6.0"
notify="5.0.0-pre.13"
subprocess = "0.2.8"
syntect = "5.0.0"
number_prefix= "0.4.0"
dyn-clone = "1.0.5"
downcast = "0.11.0"
parking_lot = "0.12.1"

ewin-const = {version = "0.0.2", path = "../ewin-const" }
ewin-cfg = {version = "0.0.2", path = "../ewin-cfg" }
# ewin-view = {version = "0.0.2", path = "../ewin-view" }
ewin-utils = {version = "0.0.2", path = "../ewin-utils" }
