[package]
name = "ewin-key"
publish = false
authors.workspace = true
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
crossterm.workspace = true
crossbeam-channel.workspace = true
anyhow.workspace = true
clipboard.workspace = true
colors-transform.workspace = true
serde.workspace = true
once_cell.workspace = true
toml.workspace = true
json5.workspace = true
serde_json.workspace = true
regex.workspace = true
notify.workspace = true
subprocess.workspace = true
syntect.workspace = true
dyn-clone.workspace = true
downcast.workspace = true
parking_lot.workspace = true

ewin-const.workspace = true
ewin-cfg.workspace = true
ewin-utils.workspace = true
