[package]
name = "ewin-utils"
version = "0.0.2"
rust-version = "1.56.0"
description = """Simple editor for Window(GUI) users.
                 No need to remember commands."""
authors = ["thinkingreed"]
edition = "2021"
repository = "https://github.com/thinkingreed/ewin"
license = "MIT"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
unicode-width = "0.1.8"
toml = "0.5.9"
anyhow = "1.0.60"
chrono = "0.4.20"
number_prefix = "0.4.0"
serde_json = "1.0.83"
ropey = "1.5.0"
encoding_rs = "0.8.31"
faccess = "0.2.4"
once_cell= "1.13.0"



ewin-const = {version = "0.0.2", path = "../ewin-const" }
ewin-cfg = {version = "0.0.2", path = "../ewin-cfg" }

[target.'cfg(windows)'.dependencies]
regex= "1.6.0"
