[package]
name = "ewin-utils"
publish = false
authors.workspace = true
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true


[dependencies]
byteorder.workspace = true
unicode-width.workspace = true
toml.workspace = true
anyhow.workspace = true
chrono.workspace = true
number_prefix.workspace = true
serde_json.workspace = true
encoding_rs.workspace = true
ropey.workspace = true
faccess.workspace = true
once_cell.workspace = true
directories.workspace = true

ewin-const.workspace = true
ewin-cfg.workspace = true

[target.'cfg(windows)'.dependencies]
regex.workspace = true
