[package]
name = "ewin-view"
publish = false
authors.workspace = true
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crossterm.workspace = true
dyn-clone.workspace = true
downcast.workspace = true
indexmap.workspace = true
syntect.workspace = true

ewin-const.workspace = true
ewin-cfg.workspace = true
ewin-utils.workspace = true
ewin-key.workspace = true
ewin-state.workspace = true
