[package]
name = "ewin-ctx_menu"
version = "0.0.2"
rust-version = "1.56.0"
description = "Simple editor for Window(GUI) users.No need to remember commands."
authors = ["thinkingreed"]
edition = "2021"
repository = "https://github.com/thinkingreed/ewin"
license = "MIT"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
once_cell = "1.5.2"
directories= "4.0.1"
tokio = { version = "1.4.0", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.0", features = ["codec"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0"
dyn-clone = "1.0.5"
downcast = "0.11.0"


ewin-cfg = {version = "0.0.2", path = "../../base/ewin-cfg" }
ewin-const = {version = "0.0.2", path = "../../base/ewin-const" }
ewin-view = {version = "0.0.2", path = "../../base/ewin-view" }
ewin-key = {version = "0.0.2", path = "../../base/ewin-key" }
ewin-job = {version = "0.0.2", path = "../../base/ewin-job" }
ewin-utils = {version = "0.0.2", path = "../../base/ewin-utils" }
ewin-plugin = {version = "0.0.2", path = "../../ewin-plugin" }
